--- a/komplex 1/src/app/app.component.html
+++ b/komplex 1/src/app/app.component.html
@@ -1,1 +1,21 @@
-<router-outlet></router-outlet>
+<div>
+    <nav class="navbar navbar-expand navbar-dark bg-dark">
+      <a href="#" class="navbar-brand">DVD/tka</a>
+      <div class="navbar-nav mr-auto">
+        <li class="nav-item">
+          <a routerLink="users" class="nav-link">Vétel</a>
+        </li>
+        <li class="nav-item">
+          <a routerLink="user/:id" class="nav-link">List</a>
+        </li>
+        <li class="nav-item">
+            <a routerLink="user-add" class="nav-link">Add</a>
+          </li>
+      </div>
+    </nav>
+  
+    <div class="container mt-3">
+      <router-outlet></router-outlet>
+    </div>
+  </div>
+  
