--- a/komplex 1/src/app/user/user-list/user-list.component.html
+++ b/komplex 1/src/app/user/user-list/user-list.component.html
@@ -1,49 +1,44 @@
-<table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
-    <ng-container matColumnDef="nev">
-      <th mat-header-cell *matHeaderCellDef> Név </th>
-      <td mat-cell *matCellDef="let element" class="text-center"> {{element.nev}} </td>
-    </ng-container>
- 
-    <ng-container matColumnDef="kor">
-      <th mat-header-cell *matHeaderCellDef> Kor </th>
-      <td mat-cell *matCellDef="let element"> {{element.kor}} </td>
-    </ng-container>
- 
-    <ng-container matColumnDef="szhely">
-      <th mat-header-cell *matHeaderCellDef> Születési hely </th>
-      <td mat-cell *matCellDef="let element" class="text-center"> {{element.szhely}} </td>
-    </ng-container>
+<div class="list row">
+    <div class="col-md-8">
+      <div class="input-group mb-3">
+        <input
+          type="text"
+          class="form-control"
+          placeholder="Search by title"
+          [(ngModel)]="nev"
+        />
+        <div class="input-group-append">
+          <button
+            class="btn btn-outline-secondary"
+            (click)="searchNev()"
+          >
+            Search
+          </button>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-6">
+      <h4>users List</h4>
+      <ul class="list-group">
+        <li
+          class="list-group-item"
+          *ngFor="let user of users; let i = index"
+          [class.active]="i == currentIndex"
+          (click)="setActiveuser(user, i)"
+        >
+          {{ user.nev }}
+        </li>
+      </ul>
   
-    <ng-container matColumnDef="password">
-      <th mat-header-cell *matHeaderCellDef> Jelszó </th>
-      <td mat-cell *matCellDef="let element" class="text-center"> {{element.password}} </td>
-    </ng-container>
-
-    <ng-container matColumnDef="username">
-      <th mat-header-cell *matHeaderCellDef> Felhasználónév </th>
-      <td mat-cell *matCellDef="let element" class="text-center"> {{element.username}} </td>
-    </ng-container>
-
-    <!-- kepUrl Column 
-    <ng-container matColumnDef="kepUrl">
-      <th mat-header-cell *matHeaderCellDef> Fénykép </th>
-      <td mat-cell *matCellDef="let element" class="text-center">
-          <img [src]="element.kepUrl" height="100" class="my-2">
-      </td>
-    </ng-container>--> 
-
-    <ng-container matColumnDef="_id">
-      <th mat-header-cell *matHeaderCellDef> Felhasználónév </th>
-      <td mat-cell *matCellDef="let element" class="text-center"> {{element._id}} </td>
-    </ng-container>
-
-    <ng-container matColumnDef="__v">
-      <th mat-header-cell *matHeaderCellDef> Felhasználónév </th>
-      <td mat-cell *matCellDef="let element" class="text-center"> {{element.__v}} </td>
-    </ng-container>
-  
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-  </table>
-  
+      <button class="m-3 btn btn-sm btn-danger" (click)="removeAllusers()">
+        Remove All
+      </button>
+    </div>
+    <div class="col-md-6">
+      <app-user-details
+        [viewMode]="true"
+        [currentUser]="currentUser"
+      ></app-user-details>
+    </div>
+  </div>
   
