--- a/komplex 1/src/app/app.component.html
+++ b/komplex 1/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div>
     <nav class="navbar navbar-expand navbar-dark bg-dark">
-      <a href="#" class="navbar-brand">DVD/tka</a>
+      <a href="#" class="navbar-brand">WebShop</a>
       <div class="navbar-nav mr-auto">
         <li class="nav-item">
           <a routerLink="users" class="nav-link">Vétel</a>
